--- a/fonts-elsewhere.conf
+++ b/fonts-elsewhere.conf
@@ -2,7 +2,7 @@ http://comicneue.com/comic-neue-2.51.zip|Comic Neue|Comic|Craig Rozynski|Comic S
 https://github.com/octaviopardo/EBGaramond12/archive/refs/heads/master.zip|EB Garamond|Serif|Various||SIL OFL 1.1
 https://software.sil.org/downloads/r/andika/Andika-6.101.zip|Andika|Sans Serif|SIL|Readable Unicode Font|SIL OFL 1.1
 https://software.sil.org/downloads/r/doulos/DoulosSIL-6.101.zip|Doulos|Serif|SIL|Unicode font with wide latin and cyrillic support|SIL OFL 1.1
-https://software.sil.org/downloads/r/gentium/GentiumPlus-6.101.zip|Gentium|Serif|SIL|Unicode font targetting lating, cyrillic and greek|SIL OFL 1.1
+https://software.sil.org/downloads/r/gentium/GentiumPlus-6.101.zip|Gentium|Serif|SIL|Unicode font targetting latin, cyrillic and greek|SIL OFL 1.1
 https://software.sil.org/downloads/r/charis/CharisSIL-6.101.zip|Charis|Serif|SIL|Readable Unicode Font|SIL OFL 1.1
 https://font.gohu.org/gohufont-2.1-otb.tar.gz|Gohu|Monospace|gohu.org|Font for Go code|WTFPL
 https://download.jetbrains.com/fonts/JetBrainsMono-2.242.zip|Jetbrains Mono|Monospace|jetbrains|Font for developers|SIL OFL 1.1
@@ -41,22 +41,6 @@ https://squaregear.net/fonts/tinier.zip|Tinier|Display|SquareGear|3-pixels high 
 https://squaregear.net/fonts/geek.zip|Ancient Geek|Display|SquareGear|Faux Athenian font from Matthew Welch/SquareGear|MIT
 https://squaregear.net/fonts/golong.zip|Go Long|Sans Serif|SquareGear|Tall font from Matthew Welch/SquareGear|MIT
 https://squaregear.net/fonts/hitroad.zip|Hit The Road|Sans Serif|SquareGear|Highway/interstate style font from Matthew Welch/SquareGear|MIT
-http://arkandis.tuxfamily.org/fonts/Accanthis-Std-20101124.zip|Accanthis|Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/AurelisNo2-Std-20110311.zip|Aurelis|Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Baskervald-Std-20150322.zip|Baskervald|Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Berenis-Pro-20150322.zip|Berenis|Serif|Arkandis|Font from Arkandis with math symbols|GPLv2
-http://arkandis.tuxfamily.org/fonts/Electrum-Exp-20100711.zip|Electrum|Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Gillius-Collection-20110312.zip|Gillius|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Ikarius-Serie-20111024.zip|Ikarius|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Irianis-Std-20100729.zip|Irianis|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Libris-Std-20110117.zip|Libris|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/NeoGothis-Std-20150405.tar.gz|Neo Gothis|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Mekanus-Std-20111025.zip|Mekanus|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Oldania-Std-20150406.tar.gz|Oldania|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Romande-Collection-20110730.zip|Romande|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Solothurn-Std-20111228.zip|Solothurn|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Tribun-Std-20120228.zip|Tribun|Sans Serif|Arkandis|Font from Arkandis|GPLv2
-http://arkandis.tuxfamily.org/fonts/Universalis-Std-20110904.zip|Universalis|Sans Serif|Arkandis|Font from Arkandis|GPLv2
 http://pixelspread.com/allerta/allerta.zip|Allerta|Display|Matt McInerney|Signage Font|SIL OFL 1.1
 https://www.wolfgang-wiebecke-kultur.de/Rrune_04-03-2018.zip|Rrune|Script|Wolfgang Wiebecke||SIL OFL 1.1
 https://www.wolfgang-wiebecke-kultur.de/FraWiWi-28-02-2018.zip|FraWiWi|Music|Wolfgang Wiebecke|Script with musical and astrological symbols|SIL OFL 1.1
@@ -127,3 +111,35 @@ https://github.com/aminabedi68/Estedad/archive/refs/heads/master.zip|Estedad|Ser
 https://github.com/intel/intel-one-mono/releases/download/V1.2.1/ttf.zip|Intel Mono One|Monospace|Intel|Programmers Font|SIL OFL 1.1
 https://github.com/gidole/Gidole-Typefaces/raw/master/gidole.zip|Gidole|Sans Serif|Andreas Larsen|DIN style sans font|SIL OFL 1.1
 https://github.com/nerdypepper/scientifica/releases/download/v2.3/scientifica.tar|Scientifica|Monospace|Nerdy Pepper|Mini Monospaced Font|SIL OFL 1.1
+https://archive.org/download/minecraft_font/minecraft.ttf|Minecraft|Comic|Mojang|Pixelated Minecraft Font|unknown
+https://archive.org/download/foodfight-font/FOODFIGHT.TTF|FoodFight|Comic|Jim George/Mona Weiss|Comic Font|unknown
+https://archive.org/download/middlecase_font/Middlecase-Regular.otf|Middlecase|Comic|Thomas Goulet|Each letter is uppercase and lowercase at the same time|unknown
+https://archive.org/download/cool_s_font/CoolS-Regular.otf|CoolS|Display|Thomas Goulet||unknown
+https://github.com/subframe7536/maple-font/releases/download/v7.0/MapleMono-OTF.zip|Maple Mono|Monospace|subframe7536@github.com||SIL OFL 1.1
+https://github.com/theleagueof/raleway/releases/download/4.101/Raleway-4.101.tar.xz|RaleWay|Sans Serif|The League of Movable Type||SIL OFL 1.1
+https://github.com/theleagueof/junction/archive/refs/heads/master.zip|Junction|Sans Serif|The League of Movable Type|Humanist Sans-Serif Font|SIL OFL 1.1
+https://github.com/theleagueof/ostrich-sans/archive/refs/heads/master.zip|Ostrich Sans|Sans Serif|The League of Movable Type||SIL OFL 1.1
+https://github.com/theleagueof/fanwood/archive/refs/heads/master.zip|Fanwood|Serif|The League of Movable Type|Roman and Italic font|SIL OFL 1.1
+https://github.com/theleagueof/linden-hill/archive/refs/heads/master.zip|Linwood Hill|Serif|The League of Movable Type|Linden Hill is a digital version of Frederic Goudy's Deepdene.|SIL OFL 1.1
+https://github.com/theleagueof/chunk/archive/refs/heads/master.zip|Chunk|Slab Serif|The League of Movable Type|reminiscent of old American Western woodcuts, broadsides, and newspaper headlines.|SIL OFL 1.1
+https://archive.org/download/atkinson-hyperlegible-font-print-and-web-2020-0514/Atkinson_Hyperlegible.zip|Atkinson Hyperlegible|Serif|Braille Institute of America|focuses on letterform distinction to increase character recognition|SIL OFL 1.1
+http://scholarsfonts.net/cardo104.zip|Cardo|Serif|David J. Perry|designed to meet the needs of classicists, Biblical scholars, medievalists|SIL OFL 1.1
+https://github.com/github/mona-sans/releases/download/v1.0.1/MonaSans.zip|Mona Sans|Sans Serif|Github||SIL OFL 1.1
+https://github.com/github/hubot-sans/releases/download/v1.0.1/Hubot-Sans.zip|Hubot Sans|Sans Serif|Github||SIL OFL 1.1
+https://sourceforge.net/projects/istok/files/istok-ttf-1.0.3.tar.xz|Istok|Sans Serif|Andrey V. Panov||SIL OFL 1.1
+http://arkandis.tuxfamily.org/fonts/Accanthis-Std-20101124.zip|Accanthis|Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/AurelisNo2-Std-20110311.zip|Aurelis|Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Baskervald-Std-20150322.zip|Baskervald|Serif|Baskervald||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Berenis-Pro-20150322.zip|Berenis Pro|Serif|Arkandis|Serif font with Math symbols|GPLv2+
+http://arkandis.tuxfamily.org/fonts/Electrum-Exp-20100711.zip|Electrum|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Ikarius-Serie-20111024.zip|Ikarius|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Irianis-Std-20100729.zip|Irianis|Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Libris-Std-20110117.zip|Libris|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/NeoGothis-Std-20150405.tar.gz|NeoGothis|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Oldania-Std-20150406.tar.gz|Oldania|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Romande-Collection-20110730.zip|Romande Collection|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Solothurn-Std-20111228.zip|Solothurn|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Tribun-Std-20120228.zip|Tribun|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/Universalis-Std-20110904.zip|Universalis|Sans Serif|Arkandis||GPLv2+
+http://arkandis.tuxfamily.org/fonts/MintSpirit-20150322.zip|Mint Spirit|Sans Serif|Arkandis||SIL OFL 1.1
+
